--- a/lettuce/playground/index.html
+++ b/lettuce/playground/index.html
@@ -12,9 +12,7 @@
   <div id="main">
     <div id="col-1" class="col">
       <h2>Lettuce Input</h2>
-      <div class="col-content" id="editor">let x = 2 in
-    let y = function(z) 2*z in
-        y(x)</div>
+      <div class="col-content" id="editor"></div>
     </div>
     <div id="col-2" class="col">
         <h2>Abstract Syntax Tree</h2>
