pshh I know how Fibonacci numbers work what are you talking about

--- a/lettuce/playground/index.html
+++ b/lettuce/playground/index.html
@@ -8,7 +8,7 @@
   <script src="./playground.js" type="module"></script>
 </head>
 <body>
-  <div id="toolbar"><h1>Lettuce Playground</h1></div>
+  <h1>Lettuce Playground</h1>
   <div id="main">
     <div id="col-1" class="col">
       <h2>Lettuce Input</h2>
@@ -22,6 +22,10 @@
     </div>
     <div id="col-3" class="col">
       <h2>Output</h2>
+      <div id="toolbar">
+        <button id="run">Run</button>
+        <button id="step">Step</button>
+      </div>
       <div class="col-content">
           <pre id="results"></pre>
       </div>
