holy CPS, I got stepping working and the interpreter is now unreadable

--- a/lettuce/playground/index.html
+++ b/lettuce/playground/index.html
@@ -24,7 +24,7 @@
       <h2>Output</h2>
       <div id="toolbar">
         <button id="run">Run</button>
-        <button id="step" disabled>Step</button>
+        <button id="step">Step</button>
       </div>
       <div class="col-content">
           <pre id="results"></pre>
