--- a/lettuce/playground/index.html
+++ b/lettuce/playground/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" href="./playground.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.1/ace.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.9/split.min.js"></script>
   <script src="./lib/raphael.js"></script>
   <script src="./lib/Treant.js"></script>
   <link rel="stylesheet" href="./lib/Treant.css"/>
@@ -15,10 +16,10 @@
       <div class="col-content" id="editor"></div>
     </div>
     <div id="col-2" class="col">
-        <h2>Abstract Syntax Tree</h2>
-        <div class="col-content">
-          <div id="rendered-tree"></div>
-        </div>
+      <h2>Abstract Syntax Tree</h2>
+      <div class="col-content">
+        <div id="rendered-tree"></div>
+      </div>
     </div>
     <div id="col-3" class="col">
       <h2>Output</h2>
