help link opens in new tab

--- a/lettuce/playground/index.html
+++ b/lettuce/playground/index.html
@@ -10,7 +10,7 @@
   <script src="./playground.js" type="module"></script>
 </head>
 <body>
-  <h1>Lettuce Playground <a class="help" href="https://github.com/mrjacobbloom/pattern-matcher.js/tree/master/lettuce">&#xF059;</a></h1>
+  <h1>Lettuce Playground <a class="help" target="_blank" href="https://github.com/mrjacobbloom/pattern-matcher.js/tree/master/lettuce">&#xF059;</a></h1>
   <div id="main">
     <div id="col-1" class="col">
       <h2>Lettuce Input</h2>
